Fixed comments not showing properly on first discussion, added loading updates on comments and discussions, minor fixes and improvements

--- a/src/components/comment/comment.module.css
+++ b/src/components/comment/comment.module.css
@@ -53,3 +53,9 @@
   border-color: var(--secondary);
   outline: none;
 }
+
+.submitting-text {
+  font-size: 0.9rem;
+  color: gray;
+  margin-bottom: 8px;
+}
